--- a/page2.html
+++ b/page2.html
@@ -23,7 +23,8 @@
         <a href="page4.html">what</a>
       </div>
     </div>
-    
+
+    <button id="button">Open a window</button>
 
 
     <div class="flexcontainer" id="photodev">
@@ -32,11 +33,11 @@
       </div>
 
       <div class="box">
-        balls
+        <button type="button" name="button" id="button2">random</button>
       </div>
 
       <div class="box">
-        balls
+        tf
       </div>
 
     </div>
@@ -45,6 +46,8 @@
     <div id="gallery">
 
     </div>
+
+
 
   </body>
     <script src="js/page2.js" type="text/javascript"></script>
