--- a/index.html
+++ b/index.html
@@ -26,7 +26,23 @@
       </div>
     </div>
 
+    <div id="moth">
+      <img src="assets/moth.png" alt="">
+    </div>
 
+    <div id="frog">
+      <img src="assets/frog.png" alt="">
+    </div>
+
+    <div id="moon">
+      <img src="assets/moon.png" alt="">
+    </div>
+
+
+
+
+
+    <!-- <button id="button">Open a window</button> -->
 
   </body>
   <script src="js/script.js" type="text/javascript"></script>
