--- a/index.html
+++ b/index.html
@@ -13,18 +13,25 @@
         <a href="index.html">home</a>
       </div>
       <div class="box">
-        <a href="page1.html">what</a>
+        <a href="page1.html">web coding</a>
       </div>
       <div class="box">
         <a href="page2.html">photography</a>
       </div>
       <div class="box">
-        <a href="page3.html">what</a>
+        <a href="page3.html">about</a>
       </div>
       <div class="box">
         <a href="page4.html">what</a>
       </div>
     </div>
+
+
+
+
+        <div id="pinkblock">
+        </div>
+
 
     <div id="moth">
       <img src="assets/moth.png" alt="">
@@ -38,8 +45,10 @@
       <img src="assets/moon.png" alt="">
     </div>
 
+    <!-- <div id="dude">
+      <img src="assets/dude.png" alt="">
+    </div> -->
 
-    <!-- what -->
 
 
     <!-- <button id="button">Open a window</button> -->
