--- a/page1.html
+++ b/page1.html
@@ -13,13 +13,13 @@
         <a href="index.html">home</a>
       </div>
       <div class="box">
-        <a href="page1.html">what</a>
+        <a href="page1.html">web coding</a>
       </div>
       <div class="box">
         <a href="page2.html">photography</a>
       </div>
       <div class="box">
-        <a href="page3.html">what</a>
+        <a href="page3.html">about</a>
       </div>
       <div class="box">
         <a href="page4.html">what</a>
@@ -28,26 +28,15 @@
 
 
     <div class="contentcontainer">
-      <div class="contentbox">
-        <div class="">
-          <p><a href="https://stoicwaffle.github.io/cdv/projects/datazine/cover.html">datazine | act of rebellion</a>
-          </p>
-        </div>
-
-        <img id = "datazine" src="assets/datazine.png" alt="">
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas vitae scel<span id="dots1">...</span><span id="more1">erisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.</span></p>
-
-        <button onclick="myFunction('morebtn1','more1','dots1')" id="morebtn1">Read more</button>
-      </div>
 
       <div class="contentbox">
         <div class="">
           <p>
-          <a href="https://stoicwaffle.github.io/cdv/projects/nickcave/">the lyrics of Nick Cave Quantified</a>
+          the lyrics of Nick Cave Quantified
           </p>
         </div>
         <img id= "nickcavegif" src="assets/nickcavewebpage.gif" alt="">
+        <p><a href="https://stoicwaffle.github.io/cdv/projects/nickcave/" target="_blank">go to</a></p>
         <p>If you don't know my favourite band now you know. Nick Cave & the Bad Seeds, what do they do in their lyrics except murder?<span id="dots2">...</span><span id="more2">
 
 methodology for data: scraping: python package LyricsGenius sentiment analysis: python package afinn other: write word processing code on python
@@ -59,11 +48,26 @@ I chose to visualize the data in a way that shows the progression of lyrics thro
 
       <div class="contentbox">
         <div class="">
-          <p>
-          manifesto: a webcollage
+          <p>datazine | act of rebellion
           </p>
         </div>
+
+        <img id = "datazine" src="assets/datazine.png" alt="">
+        <p><a href="https://stoicwaffle.github.io/cdv/projects/datazine/cover.html" target="_blank">go to</a></p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas vitae scel<span id="dots1">...</span><span id="more1">erisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.</span></p>
+
+        <button onclick="myFunction('morebtn1','more1','dots1')" id="morebtn1">Read more</button>
+      </div>
+
+      <div class="contentbox">
+        <div class="">
+          <p>
+          manifesto: collage and webcollage
+          </p>
+        </div>
+        <img id= "manifesto" src="assets/manifesto.png" alt="">
         <img id= "webcollagegif" src="assets/webcollagegif.gif" alt="">
+
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas vitae scel<span id="dots3">...</span><span id="more3">erisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.</span></p>
 
         <button onclick="myFunction('morebtn3','more3','dots3')" id="morebtn3">Read more</button>
