--- a/page2.html
+++ b/page2.html
@@ -10,14 +10,13 @@
       <div class="box">
         <a href="index.html">home</a>
       </div>
-      <div class="box">
-        <a href="page1.html">what</a>
+      <div class="box">web coding</a>
       </div>
       <div class="box">
         <a href="page2.html">photography</a>
       </div>
       <div class="box">
-        <a href="page3.html">what</a>
+        <a href="page3.html">about</a>
       </div>
       <div class="box">
         <a href="page4.html">what</a>
@@ -33,11 +32,11 @@
       </div>
 
       <div class="box">
-        <button type="button" name="button" id="button2">random</button>
+        <button type="button" name="button" id="button2">diary</button>
       </div>
 
       <div class="box">
-        tf
+        <button type="button" name="button" id="button3">35mm</button>
       </div>
 
     </div>
