--- a/page3.html
+++ b/page3.html
@@ -11,17 +11,22 @@
         <a href="index.html">home</a>
       </div>
       <div class="box">
-        <a href="page1.html">what</a>
+        <a href="page1.html">webcoding</a>
       </div>
       <div class="box">
         <a href="page2.html">photography</a>
       </div>
       <div class="box">
-        <a href="page3.html">what</a>
+        <a href="page3.html">about</a>
       </div>
       <div class="box">
         <a href="page4.html">what</a>
       </div>
+    </div>
+
+
+    <div id="dude">
+      <img src="assets/dude.png" alt="">
     </div>
 
   </body>
