--- a/page2.html
+++ b/page2.html
@@ -8,20 +8,24 @@
   <body>
     <div class="flexcontainer">
       <div class="box">
+      <span>
         <a href="index.html">home</a>
-      </div>
-      <div class="box">web coding</a>
-      </div>
-      <div class="box">
-        <a href="page2.html">photography</a>
+      </span>
       </div>
       <div class="box">
-        <a href="page3.html">about</a>
+        <span><a href="page1.html">web coding</a></span>
       </div>
       <div class="box">
-        <a href="page4.html">what</a>
+        <span>  <a href="page2.html">photography</a></span>
+      </div>
+      <div class="box">
+        <span>  <a href="page3.html">about</a></span>
+      </div>
+      <div class="box">
+        <span><a href="page4.html">what</a></span>
       </div>
     </div>
+
 
     <button id="button">Open a window</button>
 
