--- a/page4.html
+++ b/page4.html
@@ -8,21 +8,24 @@
   <body>
     <div class="flexcontainer">
       <div class="box">
+      <span>
         <a href="index.html">home</a>
+      </span>
       </div>
       <div class="box">
-        <a href="page1.html">what</a>
+        <span><a href="page1.html">web coding</a></span>
       </div>
       <div class="box">
-        <a href="page2.html">photography</a>
+        <span>  <a href="page2.html">photography</a></span>
       </div>
       <div class="box">
-        <a href="page3.html">what</a>
+        <span>  <a href="page3.html">about</a></span>
       </div>
       <div class="box">
-        <a href="page4.html">what</a>
+        <span><a href="page4.html">what</a></span>
       </div>
     </div>
+
 
   </body>
 </html>
