--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <div class="box">
         <span>  <a href="page3.html">about</a></span>
       </div>
-      <div class="box">
+      <!-- <div class="box">
         <span><a href="page4.html">what</a></span>
-      </div>
+      </div> -->
     </div>
 
 
