--- a/page3.html
+++ b/page3.html
@@ -21,15 +21,20 @@
       <div class="box">
         <span>  <a href="page3.html">about</a></span>
       </div>
-      <div class="box">
+      <!-- <div class="box">
         <span><a href="page4.html">what</a></span>
-      </div>
+      </div> -->
     </div>
 
 
 
     <div id="dude">
       <img src="assets/dude.png" alt="">
+    </div>
+
+
+    <div id="about">
+
     </div>
 
   </body>
