--- a/page4.html
+++ b/page4.html
@@ -21,9 +21,9 @@
       <div class="box">
         <span>  <a href="page3.html">about</a></span>
       </div>
-      <div class="box">
+      <!-- <div class="box">
         <span><a href="page4.html">what</a></span>
-      </div>
+      </div> -->
     </div>
 
 
