--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </span>
       </div>
       <div class="box">
-        <span><a href="page1.html">web coding</a></span>
+        <span><a href="page1.html">project</a></span>
       </div>
       <div class="box">
         <span>  <a href="page2.html">photography</a></span>
