--- a/page1.html
+++ b/page1.html
@@ -15,7 +15,7 @@
       </span>
       </div>
       <div class="box">
-        <span><a href="page1.html">web coding</a></span>
+        <span><a href="page1.html">project</a></span>
       </div>
       <div class="box">
         <span>  <a href="page2.html">photography</a></span>
@@ -29,27 +29,27 @@
     </div>
 
 
-    <div class="contentcontainer">
+  <div class="contentcontainer">
 
       <div class="contentbox">
-        <div class="">
+        <div class="title">
           <p>
           the lyrics of Nick Cave Quantified
           </p>
         </div>
         <img id= "nickcavegif" src="assets/nickcavewebpage.gif" alt="">
         <p><a href="https://stoicwaffle.github.io/cdv/projects/nickcave/" target="_blank">go to</a></p>
-        <p>If you don't know my favourite band now you know. Nick Cave & the Bad Seeds, what do they do in their lyrics except murder?<span id="dots2">...</span><span id="more2">
+                  <p>If you don't know my favourite band now you know. Nick Cave & the Bad Seeds, what do they do in their lyrics except murder?<span id="dots2">...</span><span id="more2">
 
-methodology for data: scraping: python package LyricsGenius sentiment analysis: python package afinn other: write word processing code on python
+          methodology for data: scraping: python package LyricsGenius sentiment analysis: python package afinn other: write word processing code on python
 
-I chose to visualize the data in a way that shows the progression of lyrics throughout their discograohy timeline. </span></p>
+          I chose to visualize the data in a way that shows the progression of lyrics throughout their discograohy timeline. </span></p>
 
         <button onclick="myFunction('morebtn2','more2','dots2')" id="morebtn2">Read more</button>
       </div>
 
       <div class="contentbox">
-        <div class="">
+        <div class="title">
           <p>datazine | act of rebellion
           </p>
         </div>
@@ -62,7 +62,7 @@ I chose to visualize the data in a way that shows the progression of lyrics thro
       </div>
 
       <div class="contentbox">
-        <div class="">
+        <div class="title">
           <p>
           manifesto: collage and webcollage
           </p>
@@ -76,9 +76,9 @@ I chose to visualize the data in a way that shows the progression of lyrics thro
       </div>
       </div>
 
-      <div class="contentbox">
+      <!-- <div class="contentbox">
 
-      </div>
+      </div> -->
     </div>
 
   </body>
