--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="css/page2.css">
+    <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+    <!-- <script src="https://raw.githubusercontent.com/w3c/IntersectionObserver/master/polyfill/intersection-observer.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script> -->
   </head>
   <body>
     <div class="flexcontainer">
@@ -13,7 +16,7 @@
       </span>
       </div>
       <div class="box">
-        <span><a href="page1.html">web coding</a></span>
+        <span><a href="page1.html">project</a></span>
       </div>
       <div class="box">
         <span>  <a href="page2.html">photography</a></span>
@@ -26,8 +29,10 @@
       </div> -->
     </div>
 
+    <div id="window">
+      <!-- <button id="button">Open a window</button> -->
+    </div>
 
-    <button id="button">Open a window</button>
 
 
     <div class="flexcontainer" id="photodev">
@@ -53,5 +58,7 @@
 
 
   </body>
+
     <script src="js/page2.js" type="text/javascript"></script>
+
 </html>
