--- a/page3.html
+++ b/page3.html
@@ -5,7 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="css/page3.css">
   </head>
-  <body>
+  <body onload="init()">
     <div class="flexcontainer">
       <div class="box">
       <span>
@@ -13,7 +13,7 @@
       </span>
       </div>
       <div class="box">
-        <span><a href="page1.html">web coding</a></span>
+        <span><a href="page1.html">project</a></span>
       </div>
       <div class="box">
         <span>  <a href="page2.html">photography</a></span>
@@ -34,8 +34,11 @@
 
 
     <div id="about">
-
+      <img src="assets/about.png" alt="">
     </div>
 
+
   </body>
+  <script src="js/about.js" type="text/javascript"></script>
+
 </html>
