--- a/page1.html
+++ b/page1.html
@@ -30,6 +30,20 @@
 
 
   <div class="contentcontainer">
+      <div class="contentbox">
+        <div class="title">
+          <p>
+            flyer | Temporary Park
+          </p>
+        </div>
+        <img src="assets/whole.jpg" class="flyer">
+        <img src="assets/inside.jpg" class="flyer">
+        <img src="assets/outside.jpg" class="flyer">
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas vitae scel<span id="dots4">...</span><span id="more4">erisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.</span></p>
+
+                <button onclick="myFunction('morebtn4','more4','dots4')" id="morebtn4">Read more</button>
+      </div>
 
       <div class="contentbox">
         <div class="title">
