--- a/hello/index.html
+++ b/hello/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <img src="moon.png" alt="">
+    <!-- <img src="moon.png" alt=""> -->
   </body>
 </html>
