--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>qingyu</title>
     <link rel="stylesheet" href="css/style.css">
+     <script src="http://html2canvas.hertzen.com/dist/html2canvas.js"></script>
   </head>
   <body>
 
@@ -31,30 +32,31 @@
 
 
 
-
+    <div id="everything">
         <div id="pinkblock">
         </div>
 
 
-    <div id="moth">
-      <img src="assets/moth.png" alt="">
-    </div>
+      <div id="moth">
+        <img src="assets/moth.png" alt="">
+      </div>
 
-    <div id="frog">
-      <img src="assets/frog.png" alt="">
-    </div>
+      <div id="frog">
+        <img src="assets/frog.png" alt="">
+      </div>
 
-    <div id="moon">
-      <img src="assets/moon.png" alt="">
-    </div>
-
+      <div id="moon">
+        <img src="assets/moon.png" alt="">
+      </div>
+  </div>
     <!-- <div id="dude">
       <img src="assets/dude.png" alt="">
     </div> -->
 
+    <!-- <img id="canvasimg" style="position:absolute;top:10%;left:52%;" style="display:none;"> -->
+  <input type="button" value="save" id="btn" size="30" onclick="save()" style="position:absolute;top:55%;left:10%;">
+  <input type="button" value="clear" id="clr" size="23" onclick="erase()" style="position:absolute;top:55%;left:15%;">
 
-
-    <!-- <button id="button">Open a window</button> -->
 
   </body>
   <script src="js/script.js" type="text/javascript"></script>
