--- a/page3.html
+++ b/page3.html
@@ -5,7 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="css/page3.css">
   </head>
-  <body onload="init()">
+  <body>
     <div class="flexcontainer">
       <div class="box">
       <span>
