--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>qingyu</title>
     <link rel="stylesheet" href="css/style.css">
-     <script src="http://html2canvas.hertzen.com/dist/html2canvas.js"></script>
+     <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
   </head>
   <body>
 
