--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
 
     <div id="everything">
-        <div id="pinkblock">
-        </div>
+        <!-- <div id="pinkblock">
+        </div> -->
 
 
       <div id="moth">
