--- a/page1.html
+++ b/page1.html
@@ -33,7 +33,7 @@
       <div class="contentbox">
         <div class="title">
           <p>
-            flyer | Temporary Park
+            flyer (collaborated with yuqing) | Temporary Park
           </p>
         </div>
         <img src="assets/whole.jpg" class="flyer">
