--- a/page1.html
+++ b/page1.html
@@ -33,16 +33,17 @@
       <div class="contentbox">
         <div class="title">
           <p>
-            flyer (collaborated with yuqing) | Temporary Park
+            flyer (collaborated with yuqing) | Temporary Park 临时公园
           </p>
         </div>
         <img src="assets/whole.jpg" class="flyer">
         <img src="assets/inside.jpg" class="flyer">
         <img src="assets/outside.jpg" class="flyer">
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas vitae scel<span id="dots4">...</span><span id="more4">erisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.</span></p>
+                <p>In collaboration with Yuqing Liu, the flyer is designed to recruit student participators for Temporary Park, a mutual aid Non-Profit community project. Graphics are made with hand carved stamps, oil printing and digital manipulation.<span id="dots4">...</span><span id="more4">Temporary park is a non profit creative space and community for children of migrant families in Shanghai and Queer volunteers. By June 2021, Temporary Park has successfully reached its group funding goal, ensuring the payment for satff, guest teachers and the resources for workshops and everyday creativity.</span></p>
 
                 <button onclick="myFunction('morebtn4','more4','dots4')" id="morebtn4">Read more</button>
+
       </div>
 
       <div class="contentbox">
@@ -70,7 +71,19 @@
 
         <img id = "datazine" src="assets/datazine.png" alt="">
         <p><a href="https://stoicwaffle.github.io/cdv/projects/datazine/cover.html" target="_blank">go to</a></p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas vitae scel<span id="dots1">...</span><span id="more1">erisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.</span></p>
+        <p>I choose to collect actions that i personally think is against some type of 'rules' (actions that make me think 'technically you shouldn't be doing this' or 'why would anyone do this'). I have realized from taking a walk everywhere that people do stuff that are out of the box quite often. i collected data for 9 days. I kept a mental note of my theme and took pictures or take notes when i saw something that i think would qualify. (This theme has always been on my mind and i did realize it's quite ambitious to represent in the form of data).
+<span id="dots1">...</span><span id="more1">
+  1. I choose to visualize the data by day and try my best to convey that "small acts of rebellion" are always present whether we are aware of them or not, by showing grey dots in the background. They can be literally against the law or not at all, and they can be quite obvious or rather discreet, shown by the size of the rings around each datapoint. (Even when the acts are obvious, we wouldn't necessarily realize they are in any way 'rebellious'. But that is also point: when i showed my original data to a friend, they didn't think they would call some of them 'rebellious'. I hope to convey that the ordinary acts can feel natural, unremarkable but they also have a purpose that is somewhat rebellious at heart. )
+  <br>
+2. I position the datapoints according to y-axis(how serious is the 'rule' that the act is against), and x-axis(how serious/consequential is the act itself). I thought it might be interesting to see the constrast between how noticable the act is and how in actuality serious is the consequence.
+<br>
+3. I roughly categorized the datapoints by type (why do i think they qualify as 'rebellious', according to definition on the front page.), and theme. Just to give them more attributes to look at.
+<br>
+From the data and my categorization, it seems that i observed 20 out of 47 points are "resisting control", which when i made this categorization i mean it's something a security guard would come and stop you from doing.
+<br>
+I made compromises in the sense that the events I collected lost their rich details in order to fit in the form of data points. I also put zero effort in optimizing the visual aesthetics of this project because of time and energy.
+If the project is of larger scale, I would imagine a website with many, many dots, each representing a 'rebellious act of everyday life' and readers can contribute to the content, and click/hover to see more details of possibly text/picture/video/audio forms. It would be fun to look at such a website and realize how we are consciously or unconsciously breaking the 'rules'.
+</span></p>
 
         <button onclick="myFunction('morebtn1','more1','dots1')" id="morebtn1">Read more</button>
       </div>
@@ -84,9 +97,11 @@
         <img id= "manifesto" src="assets/manifesto.png" alt="">
         <img id= "webcollagegif" src="assets/webcollagegif.gif" alt="">
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas vitae scel<span id="dots3">...</span><span id="more3">erisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.</span></p>
+        <p>A combination of words and graphics representing the principles of creating from me in February 2020.
+          <!-- <span id="dots3">...</span><span id="more3">erisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.</span> -->
+        </p>
 
-        <button onclick="myFunction('morebtn3','more3','dots3')" id="morebtn3">Read more</button>
+        <!-- <button onclick="myFunction('morebtn3','more3','dots3')" id="morebtn3">Read more</button> -->
       </div>
       </div>
 
