--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="box">
         <span><a href="page1.html">project</a></span>
       </div>
-      <div class="box">
+      <div class="box" id="box3">
         <span>  <a href="page2.html">photography</a></span>
       </div>
       <div class="box">
@@ -47,6 +47,14 @@
 
       <div id="moon">
         <img src="assets/moon.png" alt="">
+      </div>
+
+      <div style="width:60%;z-index:-2;pointer-events: none;" id="guy">
+        <img src="assets/icmdconfuse.GIF" alt="">
+      </div>
+
+      <div style="width:30%;top:120px;left:900px;position:absolute;z-index:-3;pointer-events: none;" id="hand">
+        <img src="assets/icmdhand.GIF" alt="">
       </div>
   </div>
     <!-- <div id="dude">
