--- a/page1.html
+++ b/page1.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>skfjddjkrhkj</title>
     <link rel="stylesheet" href="css/page1.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200&display=swap" rel="stylesheet">
@@ -30,6 +30,44 @@
 
 
   <div class="contentcontainer">
+    <div class="contentbox">
+      <div class="title">
+        <p>
+          chair | 3d animation
+        </p>
+      </div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/nvS8yMWS8x8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+
+              <!-- <p></p> -->
+
+              <!-- <button onclick="myFunction('morebtn4','more4','dots4')" id="morebtn4">Read more</button> -->
+
+      </div>
+
+      <div class="contentbox">
+        <div class="title">
+          <p>
+            no title | illustration for ArtHaus fair
+          </p>
+        </div>
+
+
+        <img src="assets/illcat.JPG" class="flyer" style = "width:60%;">
+        <span id="more5">
+        <img src="assets/illfall.JPG" class="flyer" style = "width:60%;">
+        <img src="assets/illpoem.JPG" class="flyer" style = "width:60%;">
+        </span>
+        <span id="dots5">...</span>
+        <button onclick="myFunction('morebtn5','more5','dots5')" id="morebtn5">Read more</button>
+
+
+                <!-- <p></p> -->
+
+                <!-- <button onclick="myFunction('morebtn4','more4','dots4')" id="morebtn4">Read more</button> -->
+
+        </div>
 
       <div class="contentbox">
         <div class="title">
@@ -48,6 +86,23 @@
               <!-- <button onclick="myFunction('morebtn4','more4','dots4')" id="morebtn4">Read more</button> -->
 
       </div>
+
+
+        <div class="contentbox">
+          <div class="title">
+            <p>
+              chair purger | flyer for speculative machine
+            </p>
+          </div>
+            <img src="assets/purgerin.png" class="flyer">
+            <img src="assets/purgerout.png" class="flyer">
+
+
+                  <!-- <p></p> -->
+
+                  <!-- <button onclick="myFunction('morebtn4','more4','dots4')" id="morebtn4">Read more</button> -->
+
+          </div>
 
       <div class="contentbox">
         <div class="title">
